# cavs

./: LICENSE  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  prestart.sh  pyproject.toml
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 054702511c3c_.py  10a17bf636ea_.py  2d970db44571_.py  4a25da80a496_initial_migration.py  4c9cd9554f1c_timezone_utc.py  54770c2d8772_add_unique_constraint_in_vote.py  6df50db9d847_initial_migration.py  7b561e13648f_.py  8b358751fc0f_.py  be3e6b9fc9d4_.py  c7e1e930e5e6_.py  eee33dfa37af_.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: poll.py  user.py  vote.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py  common.py  poll.py  vote.py
backend/app/utils/: current_bst_time.py  email_validator.py
frontend/: Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/src/: types.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: AnimatedText.tsx  Animation.tsx  CountDown.tsx  FormToast.tsx  IconLoadingSpinner.tsx  Layout.tsx  Nav.tsx  PollCard.tsx  SupabaseLogin.tsx  UserDetails.tsx  filter.tsx
frontend/src/hooks/: use-auth.ts  use-debounce.ts  use-loading-overlay.ts  use-toast.ts
frontend/src/lib/: ApiError.ts  ApiResponse.ts  AsyncHandler.ts  auth-actions.ts  axios.ts  enum.ts  pollUtils.ts  utils.ts
frontend/src/providers/: loading-overlay-provider.tsx
frontend/src/schema/: createPoll.schema.ts  (+1 more)
(+37 files in other folders)
